Fix text overflow for card's description.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,3 +24,7 @@ div.disabled
   opacity: 0.5;
   background: #CCC;
 }
+
+a { 
+  text-decoration: none !important; 
+}
